--- a/documents/rapport/rapport/biblio.bib
+++ b/documents/rapport/rapport/biblio.bib
@@ -7,6 +7,7 @@
   pages = {57-74},
   year  = {2009},
   URL = {https://doi.org/10.1080/2151237X.2009.10129287},
+  note = "[Accès en Avril 2018]"
 }
 
 
@@ -16,5 +17,26 @@
   AUTHOR = "Ulrich, Thatcher",
   TITLE = "Rendering Massive Terrains Using Chunked Level of Detail Control",
   YEAR = "2002",
-  note = "[Accès en Janvier 2018]"
+  note = "[Accès en Avril 2018]"
 }
+
+@article{Perlin,
+ author = {Perlin, Ken},
+ title = {An Image Synthesizer},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {Jul. 1985},
+ volume = {19},
+ number = {3},
+ month = jul,
+ year = {1985},
+ issn = {0097-8930},
+ pages = {287--296},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/325165.325247},
+ doi = {10.1145/325165.325247},
+ acmid = {325247},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {algorithm development, fire, functional composition, interactive, pixel stream editor, solid texture, space function, stochastic modelling, turbulence, waves},
+ note = "[Accès en Avril 2018]"
+} 
